# lifish

./: .gitignore  .ycm_extra_conf.py  BOOMLevels.json  CMakeLists.txt  CMakeLists.txt.orig  Doxyfile  LICENSE  LICENSE.txt  Makefile.msys  README.md  bomb_patterns.txt  boomtolifish.rb  compile_level.sh  compiler_flags  covbuild.sh  create_class.rb  flamegraph.sh  gen_bomb_pattern.py  gen_viable.py  level.mk  level.tdm.mk  levels.json  lf_levels.json  lvtest.json  makeapp_linux.sh  makeapp_osx.sh  makeapp_windows.sh  makeapp_windows_msvc.sh  prettyplz.awk  runcppclean.sh
.github/workflows/: ReleaseAppImage.yml  ReleaseBuilds.yml
assets/: graphics
assets/cutscenes/: boss_hauntingspirit_post.json  boss_hauntingspirit_pre.json
assets/graphics/: border3.png.2  dekomposysht.xcf  dropping_bomb.xcf  panel.xcf  swally.xcf  zap-2.xcf  zap.xcf
assets/l10n/: strings.json
assets/music/: loops.txt
assets/placeholder/: bonegun.xcf  bonus_icons.xcf  dekomposysht.xcf  hauntingspiritbullets.xcf  lightning_bullet.xcf  mainframe_boss.xcf  surge.xcf
assets/screens/: README  about.json  controls.json  error.json  home.json  pause.json  preferences.json  win.json
assets/sounds/: timebonus.ogg.orig
linux/: io.github.silverweed.lifish.desktop
osx/: BOOM.icns  Info.plist  Lifish.icns  skip_obtaining_hid_devices.patch
src/: .LevelRenderer.cpp.swo  .main.cpp.swo  AI.cpp  AI.hpp  AboutScreen.cpp  AboutScreen.hpp  AlienSprite.cpp  AlienSprite.hpp  Animated.cpp  Animated.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.hpp  Attack.hpp  AxisBullet.cpp  AxisBullet.hpp  AxisMoving.cpp  AxisMoving.hpp  Bomb.cpp  Bomb.hpp  Bonus.cpp  Bonus.hpp  Bonusable.hpp  Boss.cpp  Boss.hpp  BossBullet.cpp  BossBullet.hpp  BossExplosion.cpp  BossExplosion.hpp  BreakableWall.cpp  BreakableWall.hpp  Bullet.cpp  Bullet.hpp  Chronometer.hpp  Clickable.hpp  Clock.hpp  Clocked.hpp  Coin.cpp  Coin.hpp  Collider.cpp  (+132 more)
src/UI/: Screen.hpp
src/core/: Activable.hpp  Angle.cpp  Angle.hpp  BaseEventHandler.cpp  BaseEventHandler.hpp  BaseLevelManager.cpp  BaseLevelManager.hpp  CameraShakeRequest.hpp  CollisionDetector.cpp  CollisionDetector.hpp  Component.cpp  Component.hpp  Direction.cpp  Direction.hpp  Entity.cpp  Entity.hpp  Entity.impl.hpp  Entity.inl  EntityGroup.cpp  EntityGroup.hpp  EventHandler.hpp  FPSDisplayer.cpp  FPSDisplayer.hpp  FixedSizeCircularBuffer.hpp  GameCache.cpp  GameCache.hpp  GameTimer.cpp  GameTimer.hpp  GlobalDataPipe.hpp  JoystickListener.cpp  JoystickListener.hpp  MacPaths.h  MacPaths.mm  MultiEventHandler.cpp  MusicManager.cpp  MusicManager.hpp  Options.hpp  SHCollisionDetector.cpp  SHCollisionDetector.hpp  SimpleCollisionDetector.cpp  (+20 more)
src/core/collisions/: CollisionDetector.cpp  CollisionDetector.hpp  SHCollisionDetector.cpp  SHCollisionDetector.hpp  SimpleCollisionDetector.cpp  SimpleCollisionDetector.hpp  collision_utils.cpp  collision_utils.hpp
src/core/components/: Animated.cpp  Animated.hpp  AxisMoving.cpp  AxisMoving.hpp  AxisSighted.cpp  AxisSighted.hpp  BufferedSpawner.cpp  BufferedSpawner.hpp  Clock.hpp  Collider.cpp  Collider.hpp  CompoundCollider.cpp  CompoundCollider.hpp  Drawable.hpp  Fixed.hpp  FreeMoving.cpp  FreeMoving.hpp  FreeSighted.cpp  FreeSighted.hpp  GuidedMoving.cpp  GuidedMoving.hpp  HurtDrawProxy.cpp  HurtDrawProxy.hpp  Killable.cpp  Killable.hpp  LeapingMovement.cpp  LeapingMovement.hpp  Lifed.cpp  Lifed.hpp  Moving.cpp  Moving.hpp  MovingAnimator.cpp  MovingAnimator.hpp  Music.cpp  Music.hpp  RegularEntityDeath.cpp  RegularEntityDeath.hpp  Scored.cpp  Scored.hpp  Sighted.cpp  (+9 more)
src/core/cutscenes/: Cutscene.cpp  Cutscene.hpp  CutsceneBuilder.cpp  CutsceneBuilder.hpp  CutscenePlayer.cpp  CutscenePlayer.hpp
src/core/debug/: Counter.cpp  Counter.hpp  DebugPainter.cpp  DebugPainter.hpp  DebugRenderer.cpp  DebugRenderer.hpp  FadeoutTextManager.hpp  Stats.hpp  TimeStats.cpp  TimeStats.hpp
src/core/entities/: CameraShake.cpp  CameraShake.hpp  ShadedText.cpp  ShadedText.hpp
src/core/input/: BaseEventHandler.cpp  BaseEventHandler.hpp  JoystickListener.cpp  JoystickListener.hpp  JoystickManager.cpp  JoystickManager.hpp  MultiEventHandler.cpp  MultiEventHandler.hpp  input_utils.cpp  input_utils.hpp
src/lifish/: Attack.hpp  BonusType.cpp  BonusType.hpp  BulletFactory.cpp  BulletFactory.hpp  CollisionDetector.cpp  EnemyFactory.cpp  EnemyFactory.hpp  EntityType.cpp  EntityType.hpp  Game.cpp  Game.hpp  GameContext.cpp  GameContext.hpp  HighScoreManager.cpp  HighScoreManager.hpp  LevelLoader.cpp  LevelManager.cpp  LevelManager.hpp  LevelRenderer.cpp  LevelRenderer.hpp  LevelSet.cpp  LevelSet.hpp  Options.hpp  SaveManager.cpp  SaveManager.hpp  ai_functions.cpp  ai_functions.hpp  ai_helpers.cpp  ai_helpers.hpp  bonus_type.cpp  bonus_type.hpp  camera_utils.cpp  camera_utils.hpp  collision_functions.cpp  collision_functions.hpp  collision_layers.cpp  collision_layers.hpp  contexts.hpp  controls.cpp  (+22 more)
src/lifish/components/: AI.cpp  AI.hpp  (+71 more)
src/old/: Boss.cpp  Boss.hpp  BossBullet.cpp  ControlsScreen.cpp  Egg.cpp  FinalBoss.cpp  HomeScreen.cpp  NonAnimated.hpp  PauseScreen.hpp  Screen.hpp  ScreenHandler.cpp  ScreenHandler.hpp
src/ui/: Action.hpp  ControlsScreen.cpp  ControlsScreen.hpp  DynamicScreen.hpp  HighScoreScreen.cpp  HighScoreScreen.hpp  Interactable.hpp  LoadScreen.cpp  LoadScreen.hpp  PreferencesScreen.cpp  PreferencesScreen.hpp  SaveDataBrowser.cpp  SaveDataBrowser.hpp  SaveScreen.cpp  SaveScreen.hpp  Screen.cpp  Screen.hpp  ScreenBuilder.cpp  ScreenBuilder.hpp  ScreenCallbacks.cpp  ScreenCallbacks.hpp  ScreenHandler.cpp  ScreenHandler.hpp  ScreenStyle.hpp  SidePanel.cpp  SidePanel.hpp  TransitionGraph.hpp  UI.cpp  UI.hpp  screen_callbacks.cpp  screen_callbacks.hpp
src/win/: dialogs.cpp  dialogs.hpp
tests/: a.out  animation.cpp  bench_get  compile_with_lifish.sh  compile_with_lifish_win.sh  joystick  joystick.cpp  joystick_listener.cpp  screens.cpp  sound  sound.cpp  test_angle.cpp  test_collisions.cpp  test_cutscene.cpp  test_level.cpp  test_points.cpp  testjoystick  testjoystick.cpp  testmusic  testmusic.cpp  up.cpp
tests/shader/: shadertest
(+155 files in other folders)
